home/filebrowser/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  labels:
    app.kubernetes.io/name: filebrowser
spec:
  selector:
    app.kubernetes.io/name: filebrowser
  ports:
    - port: 443
      targetPort: web
      name: web
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  labels:
    app.kubernetes.io/name: filebrowser
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: filebrowser
  template:
    metadata:
      labels:
        app.kubernetes.io/name: filebrowser
    spec:
      automountServiceAccountToken: false
      restartPolicy: Always
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:v2.32.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 443
              protocol: TCP
              name: web
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
              ephemeral-storage: 128Mi
            limits:
              cpu: 500m
              memory: 1Gi
              ephemeral-storage: 256Mi
          volumeMounts:
            - name: data
              mountPath: /srv
            - name: db
              mountPath: /database
            - name: config
              mountPath: /.filebrowser.json
              subPath: .filebrowser.json
            - name: tls-cert
              mountPath: /cert
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: filebrowser-data
        - name: db
          persistentVolumeClaim:
            claimName: filebrowser-db
        - name: config
          configMap:
            name: filebrowser-config
        - name: tls-cert
          secret:
            secretName: fm.homelab-cert
